[package]
name = "mpdris2-rs"
version = "0.1.3"
edition = "2021"
authors = ["Leo Shen <i@szclsya.me>"]
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
thiserror = "1"
async-std = "1" 
async-broadcast = "0.5"
# Commuicating with D-Bus
zbus = "3"
zvariant = "3"
serde = "1"
# Parsing MPD protocol
nom = "7"
# Logging
log = "0.4"
colored = "2"
fern = { version = "0.6", features = ["colored"] }
# Signal processing
signal-hook = "0.3"
signal-hook-async-std = "0.2"
# Config
clap = { version = "4", features = ["derive"]}
dirs = "4.0.0"

[profile.release]
lto = true
