[package]
name = "mpdris2-rs"
version = "0.1.4"
edition = "2021"
authors = ["Leo Shen <i@szclsya.me>"]
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync", "time", "io-util"]}
futures-util = "0.3"
# Commuicating with D-Bus
zbus = { version = "3", default-features = false, features = ["tokio"] }
zvariant = "3"
serde = "1"
# Parsing MPD protocol
nom = "7"
# Logging
log = "0.4"
colored = "2"
fern = { version = "0.6", features = ["colored"] }
# Signal processing
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
# Config
argh = "0.1"
dirs = "5"

[profile.release]
# Optimize for size. This isn't a performance sensitive app
opt-level = "z"
lto = true
